--- a/app/views/shots/show.html.erb
+++ b/app/views/shots/show.html.erb
@@ -31,6 +31,22 @@
             <div class="content">
               <%= @shot.description %>
             </div>
+
+            <section class="comments">
+              <h2 class="subtitle is-5">
+                <%= pluralize(@shot.comments.count, "Comment") %>
+              </h2>
+              <%= render @shot.comments %>
+              <hr />
+              <% if user_signed_in? %>
+                <div class="comment-form">
+                  <h3 class="subtitle is-3">Leave a Reply</h3>
+                  <%= render 'comments/form' %>
+                </div>
+              <% else %>
+                <div class="content"><%= link_to 'Sign in', new_user_session_path %> to leave a comment.</div>
+              <% end %>
+            </section>
   
           </div>
         </div>
