Adding comments counts to the index and show views

--- a/app/views/shots/index.html.erb
+++ b/app/views/shots/index.html.erb
@@ -27,7 +27,7 @@
               <div class="level-item comments data">
                 <%= link_to shot do %>
                   <span class="icon"><i class="fa fa-comment"></i></span>
-                  0
+                  <%= shot.comments.count %>
                 <% end %>
               </div>
               <div class="level-item likes">
