--- a/app/views/shots/show.html.erb
+++ b/app/views/shots/show.html.erb
@@ -58,7 +58,7 @@
             </div>
             <div class="panel-block comments data">
               <span class="icon"><i class="fa fa-comment"></i></span>
-              0
+              <%= pluralize(@shot.comments.count, "Comment") %>
                 
             </div>
             <div class="panel-block likes data">
