Adding the impressionist functionality

--- a/app/views/shots/index.html.erb
+++ b/app/views/shots/index.html.erb
@@ -21,7 +21,7 @@
               <div class="level-item views data">
                 <%= link_to shot do %>
                   <span class="icon"><i class="fa fa-eye"></i></span>
-                  0
+                  <%= shot.impressionist_count %>
                 <% end %>
               </div>
               <div class="level-item comments data">
