--- a/app/views/shots/show.html.erb
+++ b/app/views/shots/show.html.erb
@@ -54,7 +54,7 @@
           <div class="nav panel show-shot-analytics">
             <div class="panel-block views data">
               <span class="icon"><i class="fa fa-eye"></i></span>
-              0
+              <%= pluralize(@shot.impressionist_count, 'View') %>
             </div>
             <div class="panel-block comments data">
               <span class="icon"><i class="fa fa-comment"></i></span>
