Finished the like and unlike functionality fot the shots controller in the index and show views

--- a/app/views/shots/show.html.erb
+++ b/app/views/shots/show.html.erb
@@ -62,8 +62,24 @@
                 
             </div>
             <div class="panel-block likes data">
-              <span class="icon"><i class="fa fa-heart has-text-primary"></i></span>
-              0
+              <% if user_signed_in? %>
+                <% if current_user.liked? @shot %>
+                  <%= link_to unlike_shot_path(@shot), method: :put, class: "unlike_shot" do %>
+                    <span class="icon"><i class="fa fa-heart has-text-primary"></i></span>
+                    <span class="vote_count"><%= pluralize(@shot.get_likes.size, 'Like') %></span>
+                  <% end %>
+                <% else %>
+                  <%= link_to like_shot_path(@shot), method: :put, class: "like_shot" do %>
+                    <span class="icon"><i class="fa fa-heart"></i></span>
+                    <span class="vote_count"><%= pluralize(@shot.get_likes.size, 'Like') %></span>
+                  <% end %>
+                <% end %>
+              <% else %> 
+                <%= link_to like_shot_path(@shot), method: :put, class: "like_shot" do %>
+                  <span class="icon"><i class="fa fa-heart"></i></span>
+                  <span class="vote_count"><%= pluralize(@shot.get_likes.size, 'Like') %></span>
+                <% end %>
+              <% end %>
             </div>
           </div>
         </div>
